--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>Maritime Resource Registry demo webpage</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <script>
+    $("#mrnSearchBox").click(
+      function () {
+      $.get('https://raw.githubusercontent.com/Digital-Maritime-Consultancy/MRR-demo-page/main/data.txt', function (data) {
+         const obj = JSON.parse(data);
+          let text="";
+          for (let i = 0; i < obj.count; i++) {
+            text += obj[i] + "<br>";
+          }
+          console.log(text);
+      });
+      });
+  </script>
 </head>
 <body>
   <div class="col-lg-12 text-center mt-5">
@@ -35,13 +49,4 @@
     </div>
   </div>
   <script async src="https://js.sitesearch360.com/plugin/bundle/999.js"></script>
-  <script>
-    $("#mrnSearchBox").click(
-      function () {
-      $.get('/data.txt', function (data) {
-         words = data.split('\s');
-         alert(words);
-      });
-      });
-  </script>
 </body>
