from 'search' to 'retrieve'

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   </div>
 
   <div class="col-md-4 offset-md-4 mt-5 border border-fail pt-3">
-    <span>Search by MRN</span>
+    <span>Retrieved by MRN</span>
   <div class="input-group mb-3">
     <input type="text" id="mrnSearchBox" class="form-control" placeholder="Search ......" aria-label="Recipient's username">
     <div class="input-group-append">
-      <button id="mrnSearchButton">Search</button>
+      <button id="mrnSearchButton">Retrieve</button>
     </div>
     </div>
   </div>
