--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
   <script>
     $("#mrnSearchButton").click(
       function () {
-      fetch('https://github.com/Digital-Maritime-Consultancy/MRR/blob/sitemap/mrn-map.json')
-      .then(response => response.text())
-      .then(data => {
-        // Do something with your data
-        console.log(data);
-      });
+        fetch('https://raw.githubusercontent.com/Digital-Maritime-Consultancy/MRR/sitemap/mrn-map.json')
+          .then(data => {
+            // Do something with your data
+            console.log(data);
+          });
       });
   </script>
   <script async src="https://js.sitesearch360.com/plugin/bundle/999.js"></script>
