--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
   <title>Maritime Resource Registry demo webpage</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
   <div class="col-lg-12 text-center mt-5">
@@ -18,7 +17,7 @@
   <div class="col-md-4 offset-md-4 mt-5 border border-fail pt-3">
     <span>General search</span>
   <div class="input-group mb-3">
-    <input type="text" id="searchBox" class="form-control" placeholder="Search ......" aria-label="Recipient's username">
+    <input type="text" id="searchBox" class="form-control">
     <div class="input-group-append">
       <button id="searchButton"></button>
     </div>
@@ -26,23 +25,34 @@
   </div>
 
   <div class="col-md-4 offset-md-4 mt-5 border border-fail pt-3">
-    <span>Retrieved by MRN</span>
+    <span>Retrieve by MRN</span>
   <div class="input-group mb-3">
-    <input type="text" id="mrnSearchBox" class="form-control" placeholder="Search ......" aria-label="Recipient's username">
+    <input type="text" id="mrnSearchBox" class="form-control" placeholder="MRN...">
     <div class="input-group-append">
-      <button id="mrnSearchButton">Retrieve</button>
+      <button class="btn btn-primary" id="mrnSearchButton">Retrieve</button>
     </div>
     </div>
   </div>
-  <script>
-    $("#mrnSearchButton").click(
-      function () {
-        fetch('https://raw.githubusercontent.com/Digital-Maritime-Consultancy/MRR/sitemap/mrn-map.json')
-          .then(data => {
-            // Do something with your data
-            console.log(data);
-          });
-      });
+  <script type="module">
+    const response = await fetch('https://raw.githubusercontent.com/Digital-Maritime-Consultancy/MRR/sitemap/mrn-map.json');
+    const json = await response.json();
+    const searchField = document.getElementById("mrnSearchBox");
+    document.getElementById("mrnSearchButton").addEventListener("click", retrieveDoc);
+    searchField.addEventListener("keypress", e => {
+      if (e.keyCode === 13) { // If key pressed is Enter
+        retrieveDoc();
+      }
+    });
+
+    function retrieveDoc() {
+      const mrn = searchField.value;
+      const url = json[mrn];
+      if (url) {
+        window.open(url, "_blank");
+      } else {
+        alert(`${mrn} was not found!`);
+      }
+    }
   </script>
   <script async src="https://js.sitesearch360.com/plugin/bundle/999.js"></script>
 </body>
